--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -36,7 +36,8 @@ builds:
 archives:
   - format_overrides:
       - goos: windows
-        format: zip
+        formats:
+          - zip
     files:
       - LICENSE
       - README.md
