--- a/pkg/config/test_config.yaml
+++ b/pkg/config/test_config.yaml
@@ -21,6 +21,7 @@ excluded-charts:
   - common
 helm-extra-args: --timeout 300s
 helm-lint-extra-args: --quiet
+helm-uninstall-extra-args: --no-hooks --cascade background
 upgrade: true
 skip-missing-values: true
 namespace: default
